--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ WP_NAME=wp
 WPCLI_NAME=wpcli
 GOAPP_NAME=goapp
 MONGO_NAME=mongo
-GOGS_NAME=gogs
+GITEA_NAME=gitea
 
 ### NGINX #####################################
 NGINX_VERSION=1.14
@@ -21,7 +21,7 @@ NGINX_ROOT_PATH=../www
 NGINX_LOG_PATH=./logs/nginx/
 
 ### MYSQL 5.7.40 | 8.0 ########################
-MYSQL_VERSION=5.7.40
+MYSQL_VERSION=8.0
 MYSQL_DATA_PATH=./data/mysql
 MYSQL_CONF_PATH=./mysql/docker.cnf
 MYSQL_PORT=13306
@@ -67,19 +67,25 @@ GO_APPPATH=../goapp
 GO_WEB_PORT=8000
 
 ### mongodb ########################
-MONGO_VERSION=3.4
+MONGO_VERSION=3.8
 MONGO_PORT=27017
-MONGO_PATH=./mongo/data/db
+MONGO_PATH=./data/mongo/db
 MONGO_USERNAME=root
-MONGO_PASSWORD=123456
+MONGO_PASSWORD=NXFFkyGWmRsR
 MONGO_CONF_PATH=./mongo/mongod.conf
 MONGO_TIMEZONE=Asia/Shanghai
 
-### gogs ########################
-GOGS_VERSION=0.13.0
-GOGS_SSH_PORT=10022
-GOGS_WEB_PORT=10881
-GOGS_DATA_PATH=./data/gogs/
+### gitea ########################
+GITEA_APP_NAME=gitea
+GITEA_VERSION=1.23.8
+GITEA_SSH_PORT=10022
+GITEA_WEB_PORT=10881
+GITEA_DATA_PATH=./data/gitea
+GITEA_DATABASE_DB_TYPE=mysql
+GITEA_DATABASE_HOST=mysql:3306
+GITEA_DATABASE_NAME=gitea
+GITEA_DATABASE_USER=root
+GITEA_DATABASE_PASSWD=123456
 
 ### ZENTAO ########################
 ZENTAO_VERSION=21.6
@@ -113,3 +119,4 @@ GOGS_IP=172.18.0.121
 ZENTAO_IP=172.18.0.122
 RABBITMQ_IP=172.18.0.123
 NACOS_IP=172.18.0.124
+GITEA_IP=172.18.0.200
