--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,29 +206,32 @@ services:
       backend:
         ipv4_address: ${GOAPP_IP}
 
-  ######## gogs ########
-  gogs:
-    build:
-      context: ./gogs
-      args:
-        - GOGS_VERSION=${GOGS_VERSION}
-    image: ${AUTHOR}/${GOGS_NAME}:${GOGS_VERSION}
-    container_name: ${GOGS_NAME}
+  ######## gitea ########
+  gitea:
+    image: docker.gitea.com/gitea:${GITEA_VERSION}
+    container_name: gitea
+    environment:
+      - USER_UID=1000
+      - USER_GID=1000
+      - GITEA__database__DB_TYPE=${GITEA_DATABASE_DB_TYPE}
+      - GITEA__database__HOST=${GITEA_DATABASE_HOST}
+      - GITEA__database__NAME=${GITEA_DATABASE_NAME}
+      - GITEA__database__USER=${GITEA_DATABASE_USER}
+      - GITEA__database__PASSWD=${GITEA_DATABASE_PASSWD}
+      - APP_NAME=${GITEA_APP_NAME}
     restart: always
-    privileged: true
-    ports:
-      - ${GOGS_SSH_PORT}:22
-      - ${GOGS_WEB_PORT}:3000
-    depends_on:
-      - mysql
-      - nginx
-    links:
-      - mysql
-    volumes:
-      - ${GOGS_DATA_PATH}:/data/gogs
     networks:
       backend:
-        ipv4_address: ${GOGS_IP}
+        ipv4_address: ${GITEA_IP}
+    volumes:
+      - ${GITEA_DATA_PATH}:/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    ports:
+      - "${GITEA_SSH_PORT}:22"
+      - "${GITEA_WEB_PORT}:3000"
+    depends_on:
+      - mysql
 
   ######## zentao ########
   zentao:
