--- a/.env.example
+++ b/.env.example
@@ -69,7 +69,7 @@ GO_WEB_PORT=8000
 ### mongodb ########################
 MONGO_VERSION=3.8
 MONGO_PORT=27017
-MONGO_PATH=./data/mongo/db
+MONGO_PATH=./data/mongo
 MONGO_USERNAME=root
 MONGO_PASSWORD=NXFFkyGWmRsR
 MONGO_CONF_PATH=./mongo/mongod.conf
